# spark-serverless-repo-example

./: LICENSE  Makefile  Readme.md  pyproject.toml
src/: main.py
src/spark_serverless_repo_exemplar/: read_file.py  save_to_bq.py
src/utils/: spark_setup.py  timer_utils.py
tests/: test_spark_serverless_repo_exemplar.py
