[tool.poetry]
name = "spark_serverless_repo_exemplar"
version = "0.1.0"
description = "A Sample Repo to be followed when Building PySpark Pipelines to be executed on GCP"
authors = ["kev-pinto"]
exclude = ["src/main*.py"]
packages = [
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
codetiming = "1.3.0"
humanfriendly = "9.1"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.1,<7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
